HID Device: Create user app to Test HID device
Implelemnt HID device test app to perform
typical use cases of HID device.

Crs-Fixed: 2912356
Change-Id: I6f133ca56dbf06dd5c65e56ad9452354f0af173e

--- a/bttestapp/AndroidManifest.xml
+++ b/bttestapp/AndroidManifest.xml
@@ -43,6 +43,15 @@
         <activity
             android:name=".HidTestApp"
             android:configChanges="orientation|keyboardHidden|screenSize" />
+
+        <service
+            android:name=".hidd.HidDeviceWrapper"
+            android:configChanges="orientation|keyboardHidden|screenSize" />
+
+         <activity
+            android:name=".hidd.HidDeviceActivity"
+            android:theme="@style/custom_style"
+            android:configChanges="orientation|keyboardHidden|screenSize" />
     </application>
 
 </manifest>
